--- a/index.html
+++ b/index.html
@@ -271,10 +271,7 @@ CrossValidationRFor &lt;- mean(PredictRFor == Data_Cross[,53])</code></pre>
 <div id="prediction-for-testset" class="section level3">
 <h3>Prediction for TestSet</h3>
 <pre class="r"><code>predictions &lt;- predict(RForMDL,newdata=RawTesting)
-print(predictions)</code></pre>
-<pre><code>##  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 
-##  B  A  B  A  A  E  D  B  A  A  B  C  B  A  E  E  A  B  B  B 
-## Levels: A B C D E</code></pre>
+#print(predictions)</code></pre>
 </div>
 </div>
 
